최소 완성도

--- a/src/main/resources/templates/header/like.html
+++ b/src/main/resources/templates/header/like.html
@@ -479,9 +479,9 @@
           <!-- 상단 제목/설명/정렬버튼 -->
           <div class="board-list-header">
             <div th:switch="${boardType}">
-              <h2 th:case="'free'">공감 게시판</h2>
+              <h2>공감 게시판</h2>
 
-              <p class="board-desc" th:case="'free'">
+              <p class="board-desc">
                 전체 게시글 중에서 공감을 많이 받은 순위별로 보여줍니다.
               </p>
             </div>
