--- a/src/main/resources/templates/header/listall.html
+++ b/src/main/resources/templates/header/listall.html
@@ -449,9 +449,9 @@
           <!-- 상단 제목/설명/정렬버튼 -->
           <div class="board-list-header">
             <div th:switch="${boardType}">
-              <h2 th:case="'free'">모아보기</h2>
+              <h2>모아보기</h2>
 
-              <p class="board-desc" th:case="'free'">
+              <p class="board-desc">
                 전체 게시글을 이곳에서 모두 보여줍니다.
               </p>
             </div>
