모아보기 제목 진하게 표시 안되던거 수정

--- a/src/main/resources/templates/header/like.html
+++ b/src/main/resources/templates/header/like.html
@@ -228,10 +228,9 @@
         }
 
         /* 제목만 가운데 */
-        .col-title .title-text {
+        .col-title .title-text a {
           font-weight: 600;
         }
-
         /* 공감/신고는 왼쪽 정렬 */
         .col-title .post-meta {
           margin-top: 4px;
