--- a/src/main/resources/templates/header/listall.html
+++ b/src/main/resources/templates/header/listall.html
@@ -229,6 +229,9 @@
       .col-date {
         text-align: center;
       }
+      .col-title > a {
+          font-weight: 600;
+        }
 
       /* 하단 페이지네이션 + 글쓰기 버튼 */
       .board-footer {
