회원가입 연결

--- a/src/main/resources/templates/login/signup.html
+++ b/src/main/resources/templates/login/signup.html
@@ -131,7 +131,7 @@
       <h1 class="signup-title">회원가입</h1>
 
       <!-- 백엔드로 POST 전송 -->
-      <form class="signup-form" th:action="@{/signup}" method="post">
+      <form class="signup-form" th:action="@{/login/signup}" method="post">
         <!-- 이메일 -->
         <div class="input-box">
           <input
