--- a/src/main/resources/templates/login/signup.html
+++ b/src/main/resources/templates/login/signup.html
@@ -173,7 +173,7 @@
 
       <p class="signup-bottom">
         이미 계정이 있으신가요?
-        <a th:href="@{/}">로그인</a>
+        <a th:href="@{/login}">로그인</a>
       </p>
     </div>
 
