--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="ko">
   <head>
     <meta charset="utf-8" />
-    <title th:text="${boardType} + ' 게시판 - 곰사육사 커뮤니티'">게시판</title>
+    <title th:text="${boardName} + '- 곰사육사 커뮤니티'">게시판</title>
 
     <style>
         /* ---------- Design tokens ---------- */
