--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -5,7 +5,9 @@
     <header th:fragment="siteHeader">
       <div class="header-inner">
         <div class="brand">
+            <a href="/" class="logo-link">
           <img src="/image/bear.png" alt="곰사육사 로고" class="logo-img" />
+            </a>
           <h1>곰사육사 강의 수강생 커뮤니티</h1>
         </div>
 
